# Client

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/: mic-processor.js
src/: App.module.css  App.tsx  api.ts  auth.ts  avatarCache.ts  config.ts  data.ts  index.css  main.tsx  notificationStore.ts  resourcePack.ts  sounds.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccountModal.module.css  AccountModal.tsx  AddServerModal.module.css  AddServerModal.tsx  BoardView.module.css  BoardView.tsx  ChatMain.module.css  ChatMain.tsx  CommunityView.module.css  CommunityView.tsx  DevPanel.module.css  DevPanel.tsx  GiphyPicker.module.css  GiphyPicker.tsx  HomeView.module.css  HomeView.tsx  Lightbox.module.css  Lightbox.tsx  Login.module.css  Login.tsx  Members.module.css  Members.tsx  MessageInput.module.css  MessageInput.tsx  PermissionGate.module.css  PermissionGate.tsx  PermissionsSetup.module.css  PermissionsSetup.tsx  Rail.module.css  Rail.tsx  RailAdapter.module.css  RailAdapter.tsx  ScreenPickerModal.module.css  ScreenPickerModal.tsx  ScreenShareOverlay.module.css  ScreenShareOverlay.tsx  ServerSettingsModal.module.css  ServerSettingsModal.tsx  SettingsModal.module.css  SettingsModal.tsx  (+20 more)
src/hooks/: useDmWebSocket.ts  useHealthCheck.ts  useNotifications.ts  usePermissionGate.ts  useResourcePack.ts  useStream.ts  useTheme.ts  useVoice.ts  useVoiceRooms.ts  useWebSocket.ts
(+6 files in other folders)
