[package]
name = "zeeble"
version = "0.1.0"
description = "Zeeble — chat that's actually yours"
authors = []
edition = "2021"

[lib]
name = "zeeble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.15"
base64 = "0.22"

