[package]
name = "zeeble"
version = "0.1.0"
description = "Zeeble — chat that's actually yours"
authors = []
edition = "2021"

[lib]
name = "zeeble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", features = ["jpeg"] }
base64 = "0.22"


